--- a/.github/workflows/First Action.yml
+++ b/.github/workflows/First Action.yml
@@ -14,26 +14,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: First Step
-        run: echo "First Job: First Step..."
+        run: echo "First Job => First Step..."
       - name: Second Step
-        run: echo "First Job: Second Step..."
+        run: echo "First Job => Second Step..."
       - name: Third Step
-        run: echo "First Job: Third Step..."
+        run: echo "First Job => Third Step..."
   second-job:
     runs-on: ubuntu-latest
     steps:
       - name: First Step
-        run: echo "Second Job: First Step..."
+        run: echo "Second Job => First Step..."
       - name: Second Step
-        run: echo "Second Job: Second Step..."
+        run: echo "Second Job => Second Step..."
       - name: Third Step
-        run: echo "Second Job: Third Step..."
+        run: echo "Second Job => Third Step..."
   third-job:
     runs-on: ubuntu-latest
     steps:
       - name: First Step
-        run: echo "Third Job: First Step..."
+        run: echo "Third Job => First Step..."
       - name: Second Step
-        run: echo "Third Job: Second Step..."
+        run: echo "Third Job => Second Step..."
       - name: Third Step
-        run: echo "Third Job: Third Step..."
+        run: echo "Third Job => Third Step..."
