--- a/.github/workflows/First Action.yml
+++ b/.github/workflows/First Action.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: First Step
-        run: echo "First Job: First Step..."
+        run: echo "First Job => First Step..."
       # - name: Second Step
       #   run: echo "First Job: Second Step..."
       # - name: Third Step
