--- a/.github/workflows/First Action.yml
+++ b/.github/workflows/First Action.yml
@@ -1,6 +1,6 @@
 name: First Workflow
 
-on: workflow_dispatch
+# on: workflow_dispatch
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -15,25 +15,25 @@ jobs:
     steps:
       - name: First Step
         run: echo "First Job => First Step..."
-      # - name: Second Step
-      #   run: echo "First Job: Second Step..."
-      # - name: Third Step
-      #   run: echo "First Job: Third Step..."
-  # second-job:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: First Step
-  #       run: echo "Second Job: First Step..."
-      # - name: Second Step
-      #   run: echo "Second Job: Second Step..."
-      # - name: Third Step
-      #   run: echo "Second Job: Third Step..."
-  # third-job:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: First Step
-  #       run: echo "Third Job: First Step..."
-      # - name: Second Step
-      #   run: echo "Third Job: Second Step..."
-      # - name: Third Step
-      #   run: echo "Third Job: Third Step..."
+      - name: Second Step
+        run: echo "First Job: Second Step..."
+      - name: Third Step
+        run: echo "First Job: Third Step..."
+  second-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: First Step
+        run: echo "Second Job: First Step..."
+      - name: Second Step
+        run: echo "Second Job: Second Step..."
+      - name: Third Step
+        run: echo "Second Job: Third Step..."
+  third-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: First Step
+        run: echo "Third Job: First Step..."
+      - name: Second Step
+        run: echo "Third Job: Second Step..."
+      - name: Third Step
+        run: echo "Third Job: Third Step..."
