--- a/.github/workflows/First Action.yml
+++ b/.github/workflows/First Action.yml
@@ -1,11 +1,17 @@
 name: First Workflow
 
+# events: create, fork, issues, issue_comment, watch, discussion, repository_dispatch, schedule, workflow_call...
 # on: workflow_dispatch
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   push:
-    branches: ["main"]
+    branches:
+      - 'main'
+    paths:
+      - '.github/workflows/**'
+      - '**.py'
+      - '**.md'
   pull_request:
     branches: ["main"]
 
@@ -14,11 +20,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: First Step
-        run: echo "First Job => First Step..."
+        run: 'echo "First Job: First Step..."'
       - name: Second Step
-        run: echo "First Job => Second Step..."
+        run: 'echo "First Job: Second Step..."'
       - name: Third Step
-        run: echo "First Job => Third Step..."
+        run: 'echo "First Job: Third Step..."'
   second-job:
     runs-on: ubuntu-latest
     steps:
