--- a/.github/workflows/Second Action.yml
+++ b/.github/workflows/Second Action.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 16
       - name: Node.js Version
