--- a/.github/workflows/Second Action.yml
+++ b/.github/workflows/Second Action.yml
@@ -15,3 +15,5 @@ jobs:
           node-version: 16
       - name: Node.js Version
         run: node -v
+      - name: Npm Version
+        run: npm -v
