--- a/.github/workflows/Second Action.yml
+++ b/.github/workflows/Second Action.yml
@@ -4,11 +4,15 @@ on: ["workflow_dispatch", "push"]
 
 jobs:
   Checkout:
-    name: Lint Code
+    name: Checkout
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+  Node:
+    name: Node.js
+    runs-on: ubuntu-latest
+    steps:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
