--- a/.github/workflows/Super Linter.yml
+++ b/.github/workflows/Super Linter.yml
@@ -12,6 +12,8 @@ jobs:
         
       - name: Run Super-Linter
         uses: github/super-linter@v3
+        with:
+          node-version: 12
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
