--- a/.github/workflows/First Action.yml
+++ b/.github/workflows/First Action.yml
@@ -26,7 +26,9 @@ jobs:
       - name: Second Step
         run: 'echo "First Job: Second Step..."'
       - name: Third Step
-        run: 'echo "First Job: Third Step..."'
+        run: |
+          echo "First Job: Third Step..."
+          echo "First Job: Third Step..."
   Second-Job:
     runs-on: ubuntu-latest
     steps:
