--- a/.github/workflows/Third Action.yml
+++ b/.github/workflows/Third Action.yml
@@ -21,6 +21,8 @@ jobs:
     name: shell Job
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout...
+        uses: actions/checkout@v2
       - name: First Step
         run: 'echo "First Job: First Step..."'
       - name: Second Step
