--- a/.github/workflows/Super Linter.yml
+++ b/.github/workflows/Super Linter.yml
@@ -9,11 +9,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        
-      - name: Run Super-Linter
-        uses: github/super-linter@v3
-        with:
-          node-version: 12.x
-        env:
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # - name: Run Super-Linter
+      #   uses: github/super-linter@v3
+      #   with:
+      #     node-version: 12.x
+      #   env:
+      #     DEFAULT_BRANCH: main
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
