--- a/.github/workflows/First Action.yml
+++ b/.github/workflows/First Action.yml
@@ -6,6 +6,7 @@ name: First Workflow
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  # [push]
   push:
     branches:
       - 'main'
